# op_lite

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  linux_build.sh  vs2019_build.bat  vs2019_dev_init.bat
buildsystem/: README_CMake.md
buildsystem/cmake/: main.cmake
ce_angelscript/: CMakeLists.txt
ce_angelscript_ex/: CMakeLists.txt
cf_serial/: CMakeLists.txt
cf_syslib/: CMakeLists.txt
op_lite/: CMakeLists.txt  op_lite_config.h
